--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -37,8 +37,8 @@
   }
 }
 
-@include margin-padding(0, 50, margin, m);
-@include margin-padding(0, 50, padding, p);
+@include margin-padding(0, 70, margin, m);
+@include margin-padding(0, 70, padding, p);
 
 
 /* Background Image mixin */
